--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "select-customer": "Select customer",
   "customer": "customer",
+  "more-info": "See more",
   "customer-table": {
     "tours": "Tours",
     "name": "Name",
