Add page header

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -17,7 +17,9 @@
   },
   "box-plot": {
     "average-temperature": "Durchschnittliche Temperatur",
-    "average-vibration": "Durchschnittliche Erschütterung"
+    "average-vibration": "Durchschnittliche Erschütterung",
+    "vibration-details": "Vibrationsdetails",
+    "temperature-details": "Temperaturdetails"
   },
   "vehicle-details": {
     "vehicle-details": "Fahrzeugs Details",
