Add annotation to box plot light

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -59,5 +59,6 @@
     "order-details": "Bestelldetails",
     "portions": "Portionen",
     "boxes": "Kisten"
-  }
+  },
+  "deselect": "Abwählen"
 }
