Translate alert and feedback component

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -50,7 +50,7 @@
     "vibration": "Vibration (Relative Frequency of Displacement Index)"
   },
   "bar-chart": {
-    "vibration": "Erschütterung (Displacement Index over Time)"
+    "vibration": "Vibration (Displacement Index over Time)"
   },
   "available-language": "DE",
   "live-map": "All live tours",
