Add alert screen

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -60,5 +60,6 @@
     "portions": "Portionen",
     "boxes": "Kisten"
   },
-  "deselect": "Abwählen"
+  "deselect": "Abwählen",
+  "no-alerts": "Keine neuen Warnungen!"
 }
