--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -60,5 +60,6 @@
     "portions": "Portions",
     "boxes": "Boxes"
   },
-  "deselect": "Deselect"
+  "deselect": "Deselect",
+  "no-alerts": "No new alerts!"
 }
